src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>OTR_RES_Facturar_Cliente_DI__c</fullName>
        <label>Importe Total Facturar Cliente desp Imp</label>
        <summarizedField>WorkOrderLineItem.PAR_FOR_Cargar_Cliente_DI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Facturar_Compania_DI__c</fullName>
        <label>Importe Total Facturar a Cía despues Imp</label>
        <summarizedField>WorkOrderLineItem.PAR_FOR_Cargar_Comp_DI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Importe_comp__c</fullName>
        <description>Sumatorio del importe a facturar a compañía de las partidas cuyo estado sea distinto de rechazado</description>
        <label>Importe compañía</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Cargar_Comp_AI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Importe_de_cliente__c</fullName>
        <description>Indica el importe a pagar por el cliente como suma de todos los importes a pagar de las partidas de la WO.</description>
        <label>Importe de cliente</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Cargar_Cliente_AI__c</summarizedField>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Importe_partidas__c</fullName>
        <description>Sumatorio del importe de las partidas cuyo estado sea distinto de rechazado</description>
        <label>Importe Total Liquidar Prof después imp</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Liquidar_Prof_DI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Impuesto_Compania__c</fullName>
        <label>Porcentaje Impuestos Cliente/Compañía</label>
        <summarizedField>WorkOrderLineItem.PAR_POR_Porcentaje_Imp_Cia_Cliente__c</summarizedField>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Liquidar_prof_AI__c</fullName>
        <label>Importe Total Liquidar a Prof antes Imp</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Liquidar_Prof_AI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Partidas__c</fullName>
        <label>Partidas</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Subtotal_Partidas__c</fullName>
        <label>Importe Total Facturar Cía antes imp</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Cargar_Comp_AI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Total_Facturar_AI__c</fullName>
        <label>Importe Total a Facturar antes impuestos</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Facturacion_Total_AI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_RES_Total_Facturar_DI__c</fullName>
        <label>Importe Total Facturar después impuestos</label>
        <summarizedField>WorkOrderLineItem.PAR_DIV_Facturacion_Total_DI__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Rechazada, Rechazada por Cliente, Rechazada por Perito, Rechazada por Gestor, Rechazada por CIA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PAR_CAS_Orden_Trabajo_Anulada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTR_SEL_AG_Motivo__c</fullName>
        <description>Campos para seleccionar motivo por los cuales un gestor deja pendiente de revisar un servicio.</description>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Importe &gt; 2000</fullName>
                </value>
                <value>
                    <fullName>Pendiente Perito</fullName>
                </value>
                <value>
                    <fullName>Pendiente Reclamación</fullName>
                </value>
                <value>
                    <fullName>Pendiente Confirmación Cliente</fullName>
                </value>
                <value>
                    <fullName>Incidencias Claims</fullName>
                </value>
                <value>
                    <fullName>Incidencias MB</fullName>
                </value>
                <value>
                    <fullName>Errores MB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Bloqueo_Eventos__c</fullName>
        <label>Bloqueo Eventos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_Codigo_evento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Categoria_del_profesional__c</fullName>
        <label>Categoría del profesional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Franquiciado</fullName>
                </value>
                <value>
                    <fullName>Licenciatario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Eventos_bloqueados_Proc__c</fullName>
        <label>Eventos bloqueados (Procedencias)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_Codigo_evento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Gremio__c</fullName>
        <description>Gremio vinculado a la orden de trabajo.</description>
        <label>Gremio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Incidente_Facturacion__c</fullName>
        <label>OTR_SEL_Incidente_Facturacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refacturacion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Modo_de_pago__c</fullName>
        <description>Modo de pago en que el cliente abona el importe correspondiente a la realización de las partidas</description>
        <label>Modo de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Contado</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Talon</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Recibo Domiciliado</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Pago por tarjeta</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Financiado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Motivo_Anulacion__c</fullName>
        <description>Motivo por el que se anula una Orden de Trabajo.</description>
        <label>Motivo de Anulación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Motivos_Anulacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Motivo_de_rectificacion__c</fullName>
        <label>Motivo de rectificación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exceso horas M.O.</fullName>
                </value>
                <value>
                    <fullName>Exceso Importe Material</fullName>
                </value>
                <value>
                    <fullName>Trabajos No realizados</fullName>
                </value>
                <value>
                    <fullName>No aceptado por perito/compañía</fullName>
                </value>
                <value>
                    <fullName>Exceso metros realizados</fullName>
                </value>
                <value>
                    <fullName>Mala interpretación del baremo</fullName>
                </value>
                <value>
                    <fullName>Exceso M.O. y Material</fullName>
                </value>
                <value>
                    <fullName>Trabajos no acreditados</fullName>
                </value>
                <value>
                    <fullName>No procede incremento</fullName>
                </value>
                <value>
                    <fullName>Avería no cubierta</fullName>
                </value>
                <value>
                    <fullName>No procede abrir 2 siniestros/servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Motivos_de_Rechazo_de_Albaran__c</fullName>
        <description>Se indican los motivos por los que se puede rechazar un albarán</description>
        <label>Motivos de Rechazo de Albarán</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Aporte factura de compra de materiales.</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Indique marca y/o modelo de material/es.</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Describa los trabajos realizados.</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Albarán ilegible (formato jpg).</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Aporte fotografías.</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Valore la reparación con códigos de baremo.</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Envíe albarán de servicio/asistencia según corresponda (el enviado no es correcto).</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Indique quien aportó el material, el importe y %iva cobrado al asegurado.</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>Otros</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Penalizacion__c</fullName>
        <label>Penalización</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No procede</fullName>
                </value>
                <value>
                    <fullName>10,00€</fullName>
                </value>
                <value>
                    <fullName>40,00€</fullName>
                </value>
                <value>
                    <fullName>90,00€</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Procedencias_bloqueadas__c</fullName>
        <label>Procedencias bloqueadas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_N_Procedencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Quien_Reclama__c</fullName>
        <description>Identifica quién reclama la documentación</description>
        <label>Quien Reclama</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Quien_Reclama</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Rango_Primera_Cita__c</fullName>
        <label>Hora de Primera Cita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Rango_2_Horas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Rango_Ultima_Cita__c</fullName>
        <label>Hora de Última Cita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Rango_2_Horas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Subestado__c</fullName>
        <label>Subestado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Revisado manualmente</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Revisado sin albarán</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Revisado como PER</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Revisado pendiente de recibir albarán que se ha devuelto al profesional</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Pendiente de revisión en espera de Homeserve por resolución</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Revisado E16</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>En Revisión</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Revisado Automáticamente sin intervención gestor</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>Revisado Automáticamente con intervención gestor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Tipo_Red__c</fullName>
        <description>Representa las tipologías de redes a las que puede pertenecer un profesional</description>
        <label>Tipo de Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipo_de_Servicio</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Tipo_de_red_prof__c</fullName>
        <label>Tipo de red profesional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_Tipos_de_red</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_SEL_Tipologia_de_Servicio__c</fullName>
        <label>Tipología de Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>SINIESTROS</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>ASISTENCIAS</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>REAL ESTATE</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>MediaMarkt</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>MB REPARACIONES</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>MANITAS</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>LDA SINIESTROS</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>MB SINIESTROS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_TEL_Telefono_C2C__c</fullName>
        <label>Teléfono C2C</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Aviso_Auditoria__c</fullName>
        <label>Aviso Auditoria de Gestión</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Codigo_de_baremo__c</fullName>
        <description>Campo que recoge los códigos de baremo del objeto WorkOrderLineItem</description>
        <label>Código de baremo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Comentario_Auditoria__c</fullName>
        <label>Comentario Auditoria</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Estado_Anterior__c</fullName>
        <description>Almacena el estado anterior de la Orden de Trabajo tras un cambio de estado.</description>
        <label>Estado Anterior</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Gestor_Rechazo__c</fullName>
        <description>Guarda el nombre del gestor al que se le rechaza un servicio durante la revisión</description>
        <label>Gestor Rechazo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_IdQuote__c</fullName>
        <description>Guardamos el ID de la Quote para procesos de auditoria de gestión</description>
        <label>IdQuote</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Id_Recurso_Anterior__c</fullName>
        <description>Id del Profesional anterior para poder comparar en caso de reasignar el Servicio.</description>
        <label>Profesional Anterior (Id)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Identificador_DLC__c</fullName>
        <description>Concatenación de la Línea de Contrato y de la Cuenta B2B secundaria para identificar de forma única el registro de la tabla intermedia.</description>
        <label>Identificador DLC</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Motivo_anulacion__c</fullName>
        <label>Motivo anulación</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Num_OrdenTrabajo_HS__c</fullName>
        <description>Nº de Orden de Trabajo HomeServe. Identificador exclusivo de la Orden de Trabajo.</description>
        <externalId>true</externalId>
        <label>Nº de Servicio HS</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OTR_TXT_Rango_Primera_Cita__c</fullName>
        <description>Concatena el valor de los campos ArrivalWindowStartTime y ArrivalWindowEndTime</description>
        <label>Rango Primera Cita</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_rectificacion__c</fullName>
        <label>Texto ampliado de la rectificación</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Case</columns>
        <columns>OTR_FOR_Compania__c</columns>
        <columns>Status</columns>
        <columns>RecordType</columns>
        <columns>CreatedDate</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>OTR_TXT_Num_OrdenTrabajo_HS__c</columns>
        <columns>OTR_LKP_Recurso_Servicio__c</columns>
        <columns>OTR_DAT_Fecha_Primera_Cita__c</columns>
        <columns>ParentWorkOrder</columns>
        <columns>OTR_FOR_Semaforo__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las órdenes de trabajo</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Informe_diario_de_entrada_de_albaranes</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>OTR_FOR_Compania__c</columns>
        <columns>OTR_FOR_DT__c</columns>
        <columns>OTR_FOR_Provincia__c</columns>
        <columns>Case</columns>
        <columns>OTR_FOR_Tipo_de_Caso__c</columns>
        <columns>OTR_FOR_Codigo_Profesional__c</columns>
        <columns>OTR_CAS_Asignar_Mizad__c</columns>
        <columns>OTR_DAT_Fecha_cambio_estado__c</columns>
        <columns>OTR_SEL_Gremio__c</columns>
        <columns>LineItemCount</columns>
        <columns>OTR_FOR_Siniestro_Peritado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OTR_DAT_Fecha_Cierre_servicio__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Informe diario de entrada de albaranes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>OTR_FOR_Compania__c</columns>
        <columns>OTR_FOR_DT__c</columns>
        <columns>OTR_FOR_Provincia__c</columns>
        <columns>Case</columns>
        <columns>OTR_FOR_Tipo_de_Caso__c</columns>
        <columns>OTR_FOR_Codigo_Profesional__c</columns>
        <columns>OTR_CAS_Asignar_Mizad__c</columns>
        <columns>OTR_DAT_Fecha_cambio_estado__c</columns>
        <columns>Status</columns>
        <columns>OTR_SEL_Gremio__c</columns>
        <columns>LineItemCount</columns>
        <columns>OTR_FOR_Siniestro_Peritado__c</columns>
        <filterScope>Mine</filterScope>
        <label>Mis órdenes de trabajo</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>OT_Cerrado_Albaran_Recibido</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>OTR_FOR_Compania__c</columns>
        <columns>OTR_FOR_DT__c</columns>
        <columns>OTR_FOR_Provincia__c</columns>
        <columns>Case</columns>
        <columns>OTR_FOR_Tipo_de_Caso__c</columns>
        <columns>OTR_FOR_Codigo_Profesional__c</columns>
        <columns>OTR_CAS_Asignar_Mizad__c</columns>
        <columns>OTR_DAT_Fecha_cambio_estado__c</columns>
        <columns>OTR_SEL_Gremio__c</columns>
        <columns>LineItemCount</columns>
        <columns>OTR_FOR_Siniestro_Peritado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.OTR_Reparable</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>994</value>
        </filters>
        <label>OT (Cerrado Albarán Recibido)</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Ordenes_de_Trabajo_HolidayGym</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>OTR_FOR_Tipo_de_Caso__c</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account</field>
            <operation>contains</operation>
            <value>Holiday Gym</value>
        </filters>
        <label>Ordenes de Trabajo HolidayGym</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>rdenes_de_Trabajo_no_asignadas</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Pdte. Asignar Normal,Pdte. Asignar Urgente</value>
        </filters>
        <label>Órdenes de Trabajo no asignadas</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>testPerm</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>contains</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>Name</field>
            <operation>contains</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Name</field>
            <operation>contains</operation>
            <value>5</value>
        </filters>
        <label>testPerm</label>
        <language>es</language>
        <sharedTo>
            <role>Integracion</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>testcosa</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <label>testcosa</label>
        <language>es</language>
        <sharedTo>
            <role>Integracion</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>OTR_En_revision</fullName>
        <active>true</active>
        <description>Record Type utilizado cuando se va a revisar un albarán asociado a la órden de trabajo de siniestros reparables</description>
        <label>En revisión</label>
    </recordTypes>
    <recordTypes>
        <fullName>OTR_Reparable</fullName>
        <active>true</active>
        <description>Record Type utilizado para especificar un layout  distinto para órdenes de trabajo de siniestros reparables</description>
        <label>Reparable</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Modo_de_pago_del_cliente</fullName>
        <active>true</active>
        <description>Si se rellena el campo &quot;Importe recibido de cliente&quot;, es necesario indicar la forma de pago con la que ha abonado el mismo (efecitvo o tarjeta)</description>
        <errorConditionFormula>AND(  NOT( ISBLANK(OTR_DIV_Importe_recibido_de_cliente__c)),  ISPICKVAL(OTR_SEL_Modo_de_pago__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>Debe indicar el modo de pago del cliente si se indica el valor del importe que ha pagado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OTR_RGV_Cabecera_Urgente</fullName>
        <active>false</active>
        <description>Regla de validación que impide modificar el check de Urgente en el gremio de cabecera.</description>
        <errorConditionFormula>IF( 
AND(ISCHANGED(OTR_CAS_Urgente__c), Case.CAS_LKP_Orden_Trabajo_Principal__c ==  Id ) , 
true, 
false
)</errorConditionFormula>
        <errorMessage>No se puede modificar la urgencia del Gremio principal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OTR_RGV_Editar_Caso_Cerrado_Anulado</fullName>
        <active>true</active>
        <description>Regla de validación que impide la edición del objeto cuando su estado es cerrado o anulado.</description>
        <errorConditionFormula>AND(
OR(TEXT(Status)==$Label.CAS_ESTADO_CERRADO,
TEXT(Status)==$Label.CAS_ESTADO_ANULADO), OR($Profile.Name!=&apos;Administrador del sistema&apos;, $Profile.Name!=&apos;Gestor Auditoria de Gestion&apos;, $Profile.Name!=&apos;Supervisor Auditoria de Gestion&apos;))</errorConditionFormula>
        <errorMessage>No es posible editar cuando el estado es cerrado o anulado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pago_Cliente</fullName>
        <active>false</active>
        <description>Si el campo Importe &quot;Importe Total Facturar Cliente desp Imp&quot; que representa la cantidad a abonar por el cliente es distinto de 0, es obligatorio rellenar el campo &quot;Importe recibido de cliente&quot;. Si el cliente no paga se debe indicar que se ha recibido 0€</description>
        <errorConditionFormula>AND(
	NOT(ISBLANK(OTR_RES_Facturar_Cliente_DI__c)),
	(ISBLANK(OTR_DIV_Importe_recibido_de_cliente__c))
	)</errorConditionFormula>
        <errorDisplayField>OTR_DIV_Importe_recibido_de_cliente__c</errorDisplayField>
        <errorMessage>Debe registrarse el Importe Recibido por el Cliente</errorMessage>
    </validationRules>
</CustomObject>